# reviewform

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_eval_scoring_columns.py
app/: main.py
app/agent/: builder.py  mcp_client.py  state.py
app/agent/nodes/: fetch_diff.py  format_response.py  human_review.py  log_eval.py  retrieve_standards.py  review_code.py
app/api/routes/: auth.py  eval.py  review.py
app/api/schemas/: review.py
app/core/: config.py  dependencies.py  logging.py  middleware.py
app/db/: base.py  models.py
app/eval/: __init__.py  logger.py  report.py  scorer.py
app/services/: github.py  qdrant.py
docker/: Dockerfile.api  Dockerfile.mcp  nginx.conf
mcp_server/: server.py
mcp_server/tools/: github.py  qdrant_search.py
scripts/: seed_standards.py
standards_data/: standards.json
tests/: conftest.py
tests/unit/: test_api.py  test_builder.py  test_mcp_client.py  test_report.py  test_review_graph.py  test_schemas.py  test_scorer.py
