[project]
name = "reviewflow"
version = "0.1.0"
description = "AI-Powered Code Review Agent using LangGraph + RAG + MCP"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # LLM & Agent framework
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",

    # MCP (server + client)
    "mcp[cli]>=1.0.0",
    "starlette>=0.41.0",

    # Vector store
    "qdrant-client>=1.12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # GitHub
    "httpx>=0.28.0",

    # Observability
    "structlog>=24.0.0",

    # Config
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
